<resources>
    <string name="app_name">CardViewMatrialDesign</string>
    <string name="user_name">Regis Charles</string>
    <string name="designation">Software developer</string>
    <string name="image">Image</string>
    <string name="terms">Agree to terms and conditions specified by the comapany</string>
    <string name="appbar">appbar</string>
    <string name="cardview">CardView</string>
    <string name="fab">Fab</string>
    <string name="cal">Calculator</string>
    <string name="snackbar">SnackBar</string>
    <string name="Activity">Activity</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday</item>
        <item>friday</item>
        <item>saturday</item>
    </string-array>
    <string-array name="select">
        <item>Choose Activity</item>
        <item>List</item>
        <item>Sonny</item>

    </string-array>
    <string-array name="names">
        <item>Regis</item>
        <item>Jenifer</item>
        <item>Charles</item>
        <item>John</item>
    </string-array>
    <string-array name="age">
        <item>25</item>
        <item>23</item>
        <item>20</item>
        <item>18</item>
    </string-array>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
